<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>tp5-final</groupId>
  <artifactId>tp5-final</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>TP5-final</name>
  <properties>
  
      <demoTest>0</demoTest>
    </properties>
    <repositories>
		<repository>
          	<id>releases</id>
          	<name>I3S Maven Releases Repository</name>
          	 <url>http://nyx.unice.fr/nexus/content/repositories/i3s-public</url>	
		</repository>
	</repositories>
  <dependencies>
  <dependency>
    <groupId>fr.unice.deptinfo</groupId>
  <artifactId>familiar-interpreter</artifactId>
  <version>0.0.1</version>
  </dependency>
  <dependency>
  <groupId>fr.unice.deptinfo</groupId>
  <artifactId>maven-compiler</artifactId>
  <version>0.0.1</version>
  </dependency>
  <dependency>
    <groupId>junit</groupId>
    <artifactId>junit</artifactId>
    <version>4.12</version>
  </dependency>
  <dependency>
   <groupId>org.mockito</groupId>
   <artifactId>mockito-core</artifactId>
   <version>1.10.19</version>
 </dependency>
</dependencies>

  <build>
    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>test</testSourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>1.7</version>
        <executions>
          <execution>
            <id>add-source</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>pluginrepo</source>
                <targetPath>target/classes</targetPath>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <executions>
              <execution>
                <goals>
                  <goal>exec</goal>
                </goals>
                <phase>exec</phase>
              </execution>
            </executions>
            <configuration>
               <!-- argLine>-Xms1000m -Xmx1000m -XX:MaxPermSize=2048m</argLine--> 
              <executable>java</executable>
              <arguments>
                <argument>-classpath</argument>
                <!-- automatically creates the classpath using all project dependencies, 
                     also adding the project build directory -->
                <classpath />
                <argument>config.ConfigHandler</argument>
                <argument>${demoTest}</argument>
              </arguments>   
            </configuration>
          </plugin>
     <plugin>
      <artifactId>maven-antrun-plugin</artifactId>
      <version>1.8</version>
      <executions>
        <execution>
          <id>copy</id>
          <phase>process-classes</phase>
          <configuration>
            <target>

              <copy todir="pluginrepo/creatures/behavior" overwrite = "true">
		
                <fileset dir="target/classes/creatures/behavior">
                 <exclude name="**/IStrategyBehavior.class"/>
               </fileset>
             </copy>

             <copy todir="pluginrepo/creatures/color" overwrite = "true">
              <fileset dir="target/classes/creatures/color">
               <exclude name="**/IColorStrategy.class"/>
             </fileset>
           </copy>

           <copy todir="pluginrepo/creatures/movement" overwrite = "true">
            <fileset dir="target/classes/creatures/movement">
             <exclude name="**/IStrategieMovement.class"/>
           </fileset>
         </copy>

       </target>
     </configuration>
     <goals>
      <goal>run</goal>
    </goals>
  </execution>
  <execution>
    <id>delete</id>
    <phase>prepare-package</phase>
    <configuration>
      <target>

        <delete>
          <fileset dir="target/classes/creatures/behavior">
            <exclude name="IStrategyBehavior.class" />
          </fileset>
        </delete>

        <delete>
          <fileset dir="target/classes/creatures/color">
            <exclude name="IColorStrategy.class" />
          </fileset>
        </delete>

        <delete>
          <fileset dir="target/classes/creatures/movement">
            <exclude name="IStrategieMovement.class" />
          </fileset>
        </delete>

      </target>
    </configuration>
    <goals>
      <goal>run</goal>
    </goals>
  </execution>
<execution>
    <id>clean</id>
    <phase>clean</phase>
    <configuration>
      <target>

        <delete>
          <fileset dir="pluginrepo/creatures/behavior">
		<exclude name="**/*.java"/>
          </fileset>
        </delete>

        <delete>
          <fileset dir="pluginrepo/creatures/color">
		<exclude name="**/*.java"/>
          </fileset>
        </delete>

        <delete>
          <fileset dir="pluginrepo/creatures/movement">
		<exclude name="**/*.java"/>
          </fileset>
        </delete>

      </target>
    </configuration>
    <goals>
      <goal>run</goal>
    </goals>
  </execution>
</executions>
</plugin>
</plugins>
</build>
</project>
